# Inspector

./: .env.example  .gitignore  .mcp.json.example  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  LICENSE  README.md  SECURITY.md  TESTING.md  mcp_server.py  mkdocs.yml  pyproject.toml  server.json
.devin/: wiki.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/manifests/: fetch-demo-app.sh  super-productivity.json
demo-apps/super-productivity/: DEMO-SETUP.md  package-lock.json
docs/: 01-vision-and-strategy.md  02-architecture.md  03-mcp-contract.md  04-core-loop.md  05-detection-and-feedback.md  06-data-schema.md  07-dashboard.md  08-roadmap.md  09-risks-and-open-questions.md  10-research-notes.md  11-implementation-steps.md  12-accounts-and-services.md  13-agentic-test-loop.md  14-ios-macos-adapter-plan.md  15-multi-agent-bug-finding.md  16-devin-integration.md  devin-smoke-test.md  index.md  tool-reference.md
examples/sample-buggy-android/: App.js  BUGS.md  README.md  app.json  bugs.json  package-lock.json  package.json
examples/sample-buggy-android-native/: README.md  settings.gradle
examples/sample-buggy-app/: README.md  bugs.json  index.html  main.js  package.json  styles.css
examples/sample-buggy-counter/: bugs.json  index.html  main.js  package.json  renderer.js
examples/sample-buggy-electron/: BUGS.md  README.md  bugs.json  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
examples/sample-buggy-flutter/: BUGS.md  README.md  bugs.json  pubspec.yaml
examples/sample-buggy-ios/: BUGS.md  README.md  bugs.json  project.yml  run.sh
examples/sample-buggy-macos/: bugs.json  project.yml
examples/sample-buggy-web/: BUGS.md  README.md  bugs.json  index.html  main.js  (+2 more)
infra/: README.md
inspector/: __init__.py  adb.py  adversarial.py  android_build.py  assertions.py  audit.py  autopilot.py  cli.py  config.py  detection.py  devin.py  docs_gen.py  doctor.py  driver.py  eval.py  expectations.py  findings.py  loop.py  models.py  notify.py  parallel.py  parallel_report.py  paths.py  plan.py  replay.py  reverify.py  sandbox.py  server.py  session.py  source_scan.py  theme.py  trace.py  verify.py
loopback/: __init__.py  config.py  detection.py  doctor.py  replay.py  sandbox.py  server.py  session.py  trace.py
scripts/: cartographer_run.py  debug_android.py  debug_chrome.py  demo_android.py  demo_android_fleet.py  demo_ios.py  demo_ios_agents.py  demo_ios_fleet.py  demo_planner.py  diag_electron.py  diag_electron2.py  diag_flutter.py  diag_ios.py  diag_macos.py  diag_macos_fixture.py  eval.py  gen_docs.py  inspect_model.py  mcp-launch.sh  probe.py  probe_detector.py  probe_electron_save.py  run_app.py  run_m0.py  run_m0_full.py  run_m0_mcp.py  run_test_app.py  serve_dashboard.py  test_one.py  verify_ios_bugs.py
tests/: test_adversarial.py  test_android.py  test_android_attach.py  test_android_build.py  test_anthropic_driver.py  test_assertions.py  test_audit.py  test_audit_fixes.py  test_audit_integration.py  test_brain.py  test_cartographer.py  test_dashboard.py  test_dashboard_serve.py  test_detect.py  test_detector.py  test_detector_contract.py  test_devin.py  test_devin_session.py  test_docs_gen.py  test_driver.py  test_electron.py  test_eval.py  test_expectations.py  test_expo.py  test_fallback_degenerate.py  test_fallback_driver.py  test_findings_enrich.py  test_image_budget.py  test_input_oracle.py  test_ios.py  test_ledger.py  test_local_electron.py  test_local_web.py  test_macos.py  test_missing_oracle_guard.py  test_models.py  test_parallel.py  test_parallel_report.py  test_plan.py  test_planner.py  (+9 more)
web/: inspector.txt  package-lock.json  package.json
(+127 files in other folders)
