[project]
name = "inspector"
version = "0.0.1"
description = "An MCP server that lets a coding agent see, operate, and test the app it built — across web, Electron, Android, and iOS — via pure computer-use."
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0",
  "pydantic>=2.0",
  "httpx>=0.27",
  "pillow>=10.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
e2b = ["e2b-desktop>=2.0"]            # web/Electron sandbox plane
replicate = ["replicate>=0.25"]      # hosted OmniParser detector + LLaVA driver
anthropic = ["anthropic>=0.40"]      # Claude brain (INSPECTOR_DRIVER=anthropic)
web = ["websocket-client>=1.7"]      # CDP console/network capture (no Playwright)
dev = ["pytest>=8.0", "ruff>=0.5"]
all = ["inspector[e2b,replicate,anthropic,web,dev]"]

[project.scripts]
inspector = "inspector.server:main"
inspector-doctor = "inspector.doctor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspector"]

[tool.pytest.ini_options]
# Only collect the real suite — keeps pytest from importing scripts/test_*.py helpers
# (which run project-detection at import and aren't tests).
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
